# namidb

./: .dockerignore  .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  HANDOFF.md  LICENSE  README.md  SECURITY.md  docker-compose.yml
.assets/: README.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  rfc.md
.github/workflows/: ci.yml  docker-image.yml  python-wheels.yml  release-binaries.yml
bench/: README.md  compare.py  kuzu_runner.py
crates/namidb/: Cargo.toml  README.md
crates/namidb-ann/: Cargo.toml  README.md
crates/namidb-ann/src/: build.rs  graph.rs  lib.rs  search.rs  space.rs
crates/namidb-bench/: Cargo.toml
crates/namidb-bench/src/: ann_bench.rs  dataset.rs  loader.rs  main.rs  queries.rs  runner.rs  vector_recall.rs
crates/namidb-bolt/: Cargo.toml  README.md
crates/namidb-bolt/src/: chunk.rs  codec.rs  error.rs  handshake.rs  lib.rs  mapping.rs  message.rs  session.rs  state.rs  value.rs
crates/namidb-cli/: Cargo.toml  README.md
crates/namidb-cli/src/: main.rs
crates/namidb-core/: Cargo.toml  README.md
crates/namidb-core/src/: error.rs  id.rs  lib.rs  profile.rs  quantize.rs  schema.rs  value.rs
crates/namidb-graph/: Cargo.toml  README.md
crates/namidb-graph/src/: algo.rs  lib.rs
crates/namidb-markdown/: Cargo.toml  README.md
crates/namidb-markdown/src/: embed.rs  id.rs  lib.rs  load.rs  parse.rs  remote.rs
crates/namidb-mcp/: Cargo.toml  README.md
crates/namidb-mcp/src/: lib.rs
crates/namidb-py/: Cargo.toml  LICENSE  README.md  pyproject.toml
crates/namidb-py/python/namidb/: __init__.py  __init__.pyi
crates/namidb-py/src/: lib.rs
crates/namidb-py/tests/: conftest.py  test_bulk_arrow.py  test_cypher.py  test_storage.py  test_uri.py
crates/namidb-query/: Cargo.toml  README.md
crates/namidb-query/src/: lib.rs  pagination.rs  plan_cache.rs  profile.rs
crates/namidb-query/src/cost/: cardinality.rs  mod.rs  selectivity.rs  stats.rs
crates/namidb-query/src/exec/: expr.rs  factor.rs  fusion.rs  leapfrog.rs  limits.rs  mod.rs  row.rs  show.rs  text_scoring.rs  value.rs  walker.rs  writer.rs
crates/namidb-query/src/optimize/: decorrelation.rs  edge_count_pushdown.rs  join_conversion.rs  join_reorder.rs  mod.rs  multiway_join.rs  normalize.rs  parquet_pushdown.rs  projection_pushdown.rs  pushdown.rs  unique_lookup.rs  vector_search.rs
crates/namidb-query/src/parser/: ast.rs  display.rs  error.rs  grammar.rs  lexer.rs  mod.rs
crates/namidb-query/src/plan/: explain.rs  logical.rs  lower.rs  mod.rs
crates/namidb-query/tests/: cost_smoke.rs  exec_alternation.rs  exec_call.rs  exec_factor_parity.rs  exec_hybrid_search.rs  exec_ldbc_snb.rs  exec_ldbc_snb_updates.rs  exec_limit_pushdown.rs  exec_limits.rs  exec_match_expand.rs  exec_multiway_join.rs  exec_multiway_join_e2e.rs  exec_multiway_join_stress.rs  exec_notnull.rs  exec_plan_aware_routing.rs  exec_shortest_path.rs  exec_topk.rs  exec_vector_dim.rs  exec_vector_knn.rs  exec_write_timeout.rs  exec_writes.rs  parser_ldbc_snb_interactive.rs
crates/namidb-query/tests/fixtures/: README.md  ic01_friends_by_name.cypher  ic02_recent_messages_by_friends.cypher  ic03_friends_in_two_countries.cypher  ic04_new_topics.cypher  ic05_new_groups.cypher  ic06_tag_cooccurrence.cypher  ic07_recent_likers.cypher  ic08_recent_replies.cypher  ic09_friends_of_friends_messages.cypher  ic10_friend_recommendation.cypher  ic11_job_referral.cypher  ic12_expert_search.cypher  ic13_shortest_path.cypher  ic14_all_shortest_paths.cypher  iu01_insert_person.cypher  iu02_add_post_like.cypher  iu06_add_post.cypher  iu08_add_friendship.cypher
crates/namidb-server/: Cargo.toml  Dockerfile  README.md
crates/namidb-server/src/: auth.rs  authz.rs  bolt.rs  introspect.rs  jwt.rs  lib.rs  main.rs  metrics.rs  pdp.rs  recovery.rs  registry.rs  shared.rs  tls.rs
crates/namidb-server/tests/: background_maintenance.rs  bolt_integration.rs  concurrent_reads.rs  jwt_test_key.pem  jwt_test_pub.pem  tls_integration.rs
crates/namidb-storage/: Cargo.toml  README.md
crates/namidb-storage/benches/: concurrent_mix.rs  ingest_throughput.rs  parquet_ingest.rs  read_latency.rs  recovery_replay.rs
crates/namidb-storage/src/: adjacency.rs  backup.rs  cache.rs  cancel.rs  compact.rs  error.rs  fence.rs  flush.rs  ingest.rs  janitor.rs  lib.rs  local.rs  manifest.rs  memtable.rs  node_cache.rs  parquet_loader.rs  paths.rs  pin.rs  property_index.rs  read.rs  recovery.rs  text.rs  unique_index.rs  uri.rs  wal.rs
crates/namidb-storage/src/sst/: bloom.rs  hll.rs  mod.rs  nodes.rs  predicates.rs  stats.rs  text.rs  vector.rs
crates/namidb-storage/src/sst/edges/: encoding.rs  fence_index.rs  format.rs  inverse.rs  mod.rs  reader.rs  writer.rs
crates/namidb-storage/tests/: csr_adjacency_parity.rs  end_to_end.rs  multi_label.rs  node_cache_parity.rs  s3_integration.rs  shared_cache_multitenancy.rs
crates/namidb/src/: lib.rs
docs/: ARCHITECTURE.md  multi-tenancy.md
docs/audit/: 2026-06-14-real-world-gaps.md
docs/rfc/: 001-storage-engine.md  002-sst-format.md  003-read-path-ranged-reads.md  004-cypher-subset.md  008-logical-plan-ir.md  009-write-clauses.md  010-cost-based-optimizer.md  011-predicate-pushdown.md  012-hash-join.md  013-parquet-predicate-pushdown.md  014-hash-semi-join.md  015-projection-pushdown.md  016-join-reorder.md  017-factorization.md  018-csr-adjacency.md  019-node-view-cache-shared.md  020-edge-sst-caches.md  021-concurrent-reads.md  022-bolt-protocol.md  023-shortest-path.md  024-wcoj.md  025-per-label-property-statistics.md  026-read-your-own-writes.md  027-compaction-and-space-reclamation.md  029-versioned-pointer.md  030-vector-index.md  031-ann-benchmark-methodology.md  032-filtered-ann-prefiltering.md  033-rich-properties-and-vectors.md  034-writer-concurrency.md  035-incremental-vector-index.md  036-query-beam-width-surface.md  (+1 more)
scripts/: check-release-metadata.py
tests/: bolt_neo4j_driver_smoke.py  docker-compose.s3.yml  run-bench-r2.sh
