[workspace]
resolver = "2"
members = [
    "crates/namidb-core",
    "crates/namidb-storage",
    "crates/namidb-markdown",
    "crates/namidb-mcp",
    "crates/namidb-graph",
    "crates/namidb-query",
    "crates/namidb-cli",
    "crates/namidb",
    "crates/namidb-py",
    "crates/namidb-server",
    "crates/namidb-bench",
    "crates/namidb-bolt",
]

[workspace.package]
version = "0.18.0"
edition = "2021"
rust-version = "1.85"
license = "BUSL-1.1"
repository = "https://github.com/namidb/namidb"
homepage = "https://namidb.com"
description = "Cloud-native graph database on object storage"
authors = ["The NamiDB Contributors"]
readme = "README.md"

[workspace.dependencies]
# Core async runtime
tokio = { version = "1.43", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Filesystem watching (the `--watch` live-sync path; binary crates only)
notify = "6"
notify-debouncer-full = "0.3"

# Object storage (S3 / GCS / Azure / Local / Memory)
object_store = { version = "0.13", features = ["aws", "gcp", "azure"] }

# Columnar in-memory
arrow = { version = "55", features = ["prettyprint"] }
arrow-array = "55"
arrow-buffer = "55"
arrow-schema = "55"
arrow-select = "55"
arrow-ord = "55"

# Parquet
parquet = { version = "55", features = ["async", "object_store"] }

# Hybrid cache
foyer = "0.22"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1.3"
prost = "0.13"

# HTTP client for remote embedding providers. rustls (not native-tls) to avoid a
# second TLS stack and a C toolchain; one source of truth for server + markdown.
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Compression
zstd = "0.13"
lz4_flex = "0.11"

# Utilities
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "v7", "serde"] }
hex = "0.4"
crc32fast = "1.4"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
base64 = "0.22"
blake3 = "1.5"
fs2 = "0.4"
url = "2"

# Errors
anyhow = "1"
thiserror = "2"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Telemetry
opentelemetry = "0.27"

# Testing
proptest = "1.5"
tokio-test = "0.4"
tempfile = "3.13"
criterion = { version = "0.5", features = ["async_tokio", "html_reports"] }

# Markdown / vault ingest (isolated to namidb-markdown so the core
# storage/query crates stay free of these parsers)
pulldown-cmark = { version = "0.12", default-features = false }
yaml-rust2 = "0.10"
regex = "1"

# CLI
clap = { version = "4", features = ["derive", "wrap_help", "env"] }
indicatif = "0.17"
console = "0.15"

# HTTP server (later)
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }

# Local workspace crates
namidb-core = { path = "crates/namidb-core", version = "0.18.0" }
namidb-storage = { path = "crates/namidb-storage", version = "0.18.0" }
namidb-markdown = { path = "crates/namidb-markdown", version = "0.18.0" }
namidb-graph = { path = "crates/namidb-graph", version = "0.18.0" }
namidb-query = { path = "crates/namidb-query", version = "0.18.0" }
namidb-bolt = { path = "crates/namidb-bolt", version = "0.18.0" }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
debug = "line-tables-only"
strip = "debuginfo"
panic = "abort"

[profile.dev]
opt-level = 0
debug = true

[profile.bench]
opt-level = 3
lto = "thin"
debug = false

[profile.test]
opt-level = 1
