[package]
name = "namidb-ann"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "DiskANN/Vamana approximate-nearest-neighbor index for NamiDB vector search"
readme = "README.md"

[dependencies]
namidb-core = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
rand = "0.8"
rand_chacha = "0.3"

[dev-dependencies]
serde_json = { workspace = true }
