[package]
name = "namidb-markdown"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Ingest an Obsidian-style markdown vault (wikilinks + frontmatter) into NamiDB as a graph"
readme = "README.md"

[dependencies]
namidb-core = { workspace = true }
namidb-storage = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
blake3 = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
pulldown-cmark = { workspace = true }
yaml-rust2 = { workspace = true }
regex = { workspace = true }

[dev-dependencies]
object_store = { workspace = true }
tempfile = { workspace = true }
