[package]
name = "namidb-query"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Cypher/GQL parser, optimizer, and executor for NamiDB"
readme = "README.md"

[dependencies]
namidb-core = { workspace = true }
namidb-graph = { workspace = true }
namidb-storage = { workspace = true }
arrow = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
xxhash-rust = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
proptest = { workspace = true }
object_store = { workspace = true }
tokio = { workspace = true, features = ["full", "macros", "rt-multi-thread"] }
chrono = { workspace = true }
serde_json = { workspace = true }
