[package]
name = "namidb-query"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Cypher/GQL parser, optimizer, and executor for NamiDB"
readme = "README.md"

# Cosmetic doc-rendering nit (lazy markdown list continuation); allowed
# crate-wide (covers lib + tests) rather than reflowing the doc comments.
[lints.clippy]
doc_lazy_continuation = "allow"

[features]
default = []
# DiskANN/Vamana ANN support (RFC-030). Gates the `vector_search` optimizer
# rewrite (produces `LogicalPlan::VectorSearch`) and the executor's
# index-backed dispatch; enables the storage-side `vector-index` so the
# `Snapshot::vector_search` reader exists. The variant + its flat fallback are
# always compiled. Default off.
vector-index = ["namidb-storage/vector-index"]

[dependencies]
namidb-core = { workspace = true }
namidb-graph = { workspace = true }
namidb-storage = { workspace = true }
arrow = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
xxhash-rust = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
proptest = { workspace = true }
object_store = { workspace = true }
tokio = { workspace = true, features = ["full", "macros", "rt-multi-thread"] }
serde_json = { workspace = true }
