[package]
name = "namidb-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "HTTP server exposing a NamiDB namespace over REST"
readme = "README.md"

[[bin]]
name = "namidb-server"
path = "src/main.rs"

[dependencies]
namidb-core = { workspace = true }
namidb-storage = { workspace = true }
namidb-query = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
clap = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
base64 = { workspace = true }
humantime = "2"

[dev-dependencies]
tempfile = { workspace = true }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio-test = { workspace = true }
