[package]
name = "namidb-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "HTTP server exposing a NamiDB namespace over REST"
readme = "README.md"

[[bin]]
name = "namidb-server"
path = "src/main.rs"

[dependencies]
namidb-core = { workspace = true }
namidb-storage = { workspace = true }
namidb-query = { workspace = true }
namidb-bolt = { workspace = true }
object_store = { workspace = true, features = ["aws"] }
tokio = { workspace = true }
async-trait = { workspace = true }
clap = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
base64 = { workspace = true }
humantime = "2"
# TLS on the serving path (rustls, aligned with the versions already in the
# lock via reqwest/object_store). `ring` avoids the aws-lc-rs C toolchain.
axum-server = { version = "0.7", features = ["tls-rustls"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12", "logging"] }
rustls-pemfile = "2"

[dev-dependencies]
tempfile = { workspace = true }
reqwest = { workspace = true }
tokio-test = { workspace = true }
bytes = { workspace = true }
tracing-subscriber = { workspace = true }
rcgen = "0.13"
# Also dev-deps so the TLS integration test (a separate crate) can drive a
# verifying rustls client; they unify with the versions above.
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring"] }
