[package]
name = "namidb-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "HTTP server exposing a NamiDB namespace over REST"
readme = "README.md"

[features]
default = []
# DiskANN/Vamana ANN end-to-end (RFC-030): routes `CREATE VECTOR INDEX` DDL
# to `WriterSession::register_vector_index` (pre-plan intercept) AND turns on
# the storage build hook + the query optimizer/executor acceleration paths,
# so a registered index is actually built and used. With the feature off the
# DDL is rejected at the lowerer (HTTP 400 / Bolt NotSupported).
vector-index = ["namidb-query/vector-index", "namidb-storage/vector-index"]
# OIDC/JWT bearer-token auth (RFC-015 Wave A). Adds a JWT validator that
# verifies bearer tokens against a JWKS URL and maps a group claim to a Role.
# It plugs into AuthConfig::role_for, so both HTTP and Bolt become JWT-aware
# with no signature changes. reqwest (JWKS fetch) + jsonwebtoken are optional.
# Default off; with it off, behavior is byte-identical (static-token auth only).
jwt = ["dep:reqwest", "dep:jsonwebtoken"]

[[bin]]
name = "namidb-server"
path = "src/main.rs"

[dependencies]
namidb-core = { workspace = true }
namidb-storage = { workspace = true }
namidb-query = { workspace = true }
namidb-bolt = { workspace = true }
object_store = { workspace = true, features = ["aws"] }
tokio = { workspace = true }
async-trait = { workspace = true }
clap = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
base64 = { workspace = true }
humantime = "2"
# TLS on the serving path (rustls, aligned with the versions already in the
# lock via reqwest/object_store). `ring` avoids the aws-lc-rs C toolchain.
axum-server = { version = "0.7", features = ["tls-rustls"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12", "logging"] }
rustls-pemfile = "2"
# JWT (OIDC) auth — optional, behind the `jwt` feature. reqwest fetches the
# JWKS; jsonwebtoken verifies tokens. Both absent when the feature is off.
reqwest = { workspace = true, optional = true }
jsonwebtoken = { workspace = true, optional = true }

[dev-dependencies]
tempfile = { workspace = true }
reqwest = { workspace = true }
tokio-test = { workspace = true }
bytes = { workspace = true }
tracing-subscriber = { workspace = true }
rcgen = "0.13"
# Also dev-deps so the TLS integration test (a separate crate) can drive a
# verifying rustls client; they unify with the versions above.
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring"] }
