[package]
name = "namidb-storage"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "LSM storage engine on object storage for NamiDB"
readme = "README.md"

# Cosmetic doc-rendering nit (lazy markdown list continuation in doc comments);
# allowed crate-wide (covers lib + benches + tests) rather than reflowing ~120
# comments. Applied via [lints] so `--all-targets` is clean too.
[lints.clippy]
doc_lazy_continuation = "allow"

[dependencies]
namidb-core = { workspace = true }
# Optional: the DiskANN/Vamana algorithm crate. Only pulled in behind the
# `vector-index` feature; the rest of the crate must compile without it.
namidb-ann = { workspace = true, optional = true }
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
object_store = { workspace = true }
arrow = { workspace = true }
arrow-array = { workspace = true }
arrow-buffer = { workspace = true }
arrow-schema = { workspace = true }
parquet = { workspace = true }
foyer = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
bytes = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
crc32fast = { workspace = true }
zstd = { workspace = true }
xxhash-rust = { workspace = true }
base64 = { workspace = true }
blake3 = { workspace = true }
fs2 = { workspace = true }
url = { workspace = true }
anyhow = { workspace = true }
arrow-ipc = "55"

[features]
default = []
# DiskANN/Vamana ANN support (RFC-030). Enables the compaction-time graph
# build hook and the VectorGraph SST reader. Default off — existing namespaces
# stay byte-for-byte identical with it disabled.
vector-index = ["dep:namidb-ann"]
# Persistent full-text (BM25) inverted index. Enables the compaction-time index
# build hook and the TextIndex SST reader so `CALL search.bm25` answers from the
# index instead of re-scanning. Default off — byte-identical when disabled.
text-index = []

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = { workspace = true }
# `vector-index` test fixtures (clustered synthetic vectors) need RNG.
rand = "0.8"
rand_chacha = "0.3"
# Bench-only: install aws-lc-rs as the rustls crypto provider so the S3
# client can negotiate TLS 1.3 against Cloudflare R2 (which rejects the
# default `ring` provider's ClientHello — likely a signature-algorithm
# preference mismatch on their account-id-prefixed endpoint).
rustls = { version = "0.23", features = ["aws-lc-rs"] }
proptest = { workspace = true }
tracing-subscriber = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "read_latency"
harness = false

[[bench]]
name = "ingest_throughput"
harness = false

[[bench]]
name = "recovery_replay"
harness = false

[[bench]]
name = "parquet_ingest"
harness = false

[[bench]]
name = "concurrent_mix"
harness = false
