[package]
name = "namidb"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "NamiDB: cloud-native graph database — public façade crate"
readme = "README.md"

[dependencies]
namidb-core = { workspace = true }
namidb-storage = { workspace = true }
namidb-graph = { workspace = true }
namidb-query = { workspace = true }
